REBUILD.log
--------------- Rebuild Started: 05/27/2025 00:49:12 Project: HCM_UPBDrive, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\can_comm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\hybrid_mode.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\user_input.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN_TX_RX_func.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN_RX.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CAN_TX.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Selector_In.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Boost_Button.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\AIR_enable.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HCM_UPBDrive.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HCM_UPBDrive.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\HCM_UPBDrive.map"
Deleting file ".\HCM_UPBDrive.cycdx"
Deleting file ".\HCM_UPBDrive.svd"
Deleting file ".\HCM_UPBDrive.rpt"
Deleting file ".\HCM_UPBDrive_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\badea\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\HCM_UPBDrive.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
ADD: sdb.M0060: warning: Warning in component: CAN. The BUS_CLK clock accuracy should be 0.5% or better. Please, use an external XTAL or external clock source to meet the CAN accurate clocking requirements.
 * C:\Users\badea\Documents\PSoC Creator\can_bun\HCM_UPBDrive.cydsn\TopDesign\TopDesign.cysch (Instance:CAN)
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/can_comm.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c src\can_comm.c -o .\CortexM3\ARM_GCC_541\Debug\can_comm.o
src\can_comm.c:25:6: error: conflicting types for 'CAN_Transmit_To_ESC'
 void CAN_Transmit_To_ESC(uint8_t driving_mode, int8_t duty_cycle)
      ^
In file included from src\can_comm.c:8:0:
./include/can_comm.h:40:6: note: previous declaration of 'CAN_Transmit_To_ESC' was here
 void CAN_Transmit_To_ESC(uint8_t driving_mode, int16_t duty_cycle);
      ^
src\can_comm.c: In function 'CAN_Transmit_To_ESC':
src\can_comm.c:27:41: warning: implicit declaration of function 'Map_Duty_Cycle' [-Wimplicit-function-declaration]
     volatile int16_t duty_cycle_15bit = Map_Duty_Cycle(duty_cycle);
                                         ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/27/2025 00:49:18 ---------------
